@@ -2,6 +2,17 @@
 
 	Resynced with GNU Classpath.
 
+	2005-05-31  Sven de Marothy  <sven@physto.se>
+
+	* java/awt/image/BufferedImage.java:
+	(ImageProducer): Use Vector instead of HashMap.
+	* java/awt/image/DirectColorModel.java:
+	(getAlpha): Default to 255 (opaque).
+	
+2005-06-10  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-05-30  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/JTree.java
